[package]
name = "rask-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "blocking", "query"]}
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.149"

